apps/production/prowlarr/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-route
  namespace: prowlarr
spec:
  hostnames:
    - prowlarr.fanen.dk
